// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar Avatar Stack 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 div:last-child {
  width: 2.875rem;
}

.emotion-3 {
  z-index: 6;
  width: 2.3000000000000003rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-4 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  z-index: 5;
  width: 2.3000000000000003rem;
}

.emotion-7 {
  z-index: 4;
  width: 2.3000000000000003rem;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-8 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-9 {
  z-index: 3;
  width: 2.3000000000000003rem;
}

.emotion-11 {
  z-index: 0;
  width: 2.3000000000000003rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 div:last-child {
  width: 1.5rem;
}

.emotion-14 {
  z-index: 6;
  width: 1.2000000000000002rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.6875rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-15 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-16 {
  z-index: 5;
  width: 1.2000000000000002rem;
}

.emotion-17 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.6875rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-17 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-18 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-19 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-19 path {
  fill: white;
}

.emotion-20 {
  z-index: 4;
  width: 1.2000000000000002rem;
}

.emotion-22 {
  z-index: 0;
  width: 1.2000000000000002rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 div:last-child {
  width: 1.25rem;
}

.emotion-25 {
  z-index: 6;
  width: 1rem;
}

.emotion-26 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-26 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-27 {
  z-index: 5;
  width: 1rem;
}

.emotion-29 {
  z-index: 4;
  width: 1rem;
}

.emotion-31 {
  z-index: 3;
  width: 1rem;
}

.emotion-33 {
  z-index: 0;
  width: 1rem;
}

.emotion-34 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-34 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-35 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 div:last-child {
  width: 1rem;
}

.emotion-36 {
  z-index: 6;
  width: 0.8rem;
}

.emotion-37 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.5rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-37 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-38 {
  z-index: 5;
  width: 0.8rem;
}

.emotion-40 {
  z-index: 4;
  width: 0.8rem;
}

.emotion-41 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.5rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-41 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-42 {
  z-index: 3;
  width: 0.8rem;
}

.emotion-44 {
  z-index: 0;
  width: 0.8rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="avatarstack"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-4"
            >
              <img
                src="https://mui.com/static/images/avatar/5.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-7"
          >
            <div
              className="emotion-8"
            >
              
              JN
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <div
              className="emotion-4"
            >
              <img
                src="https://mui.com/static/images/avatar/3.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-11"
          >
            <div
              className="emotion-8"
            >
              
              +
              2
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-13"
          data-testid="avatarstack"
        >
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <div
              className="emotion-17"
            >
              
              <span
                className="emotion-18"
                onClick={[Function]}
              >
                <span
                  className="emotion-19"
                />
              </span>
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <div
              className="emotion-15"
            >
              <img
                src="https://mui.com/static/images/avatar/4.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-22"
          >
            <div
              className="emotion-17"
            >
              
              +
              3
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-24"
          data-testid="avatarstack"
        >
          <div
            className="emotion-25"
          >
            <div
              className="emotion-26"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-27"
          >
            <div
              className="emotion-26"
            >
              <img
                src="https://mui.com/static/images/avatar/5.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-29"
          >
            <div
              className="emotion-26"
            >
              <img
                src="https://mui.com/static/images/avatar/4.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-31"
          >
            <div
              className="emotion-26"
            >
              <img
                src="https://mui.com/static/images/avatar/3.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-33"
          >
            <div
              className="emotion-34"
            >
              
              +
              2
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-35"
          data-testid="avatarstack"
        >
          <div
            className="emotion-36"
          >
            <div
              className="emotion-37"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-38"
          >
            <div
              className="emotion-37"
            >
              <img
                src="https://mui.com/static/images/avatar/5.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-40"
          >
            <div
              className="emotion-41"
            >
              
              JN
            </div>
          </div>
          <div
            className="emotion-42"
          >
            <div
              className="emotion-37"
            >
              <img
                src="https://mui.com/static/images/avatar/3.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-44"
          >
            <div
              className="emotion-41"
            >
              
              +
              2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with icon 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.5rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: white;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-4 path {
  fill: white;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  fill: white;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-7 path {
  fill: white;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.6875rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-8 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: white;
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-11 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  fill: white;
  width: 1.75rem;
  height: 1.75rem;
}

.emotion-13 path {
  fill: white;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-8"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-11"
        >
          
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-13"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with letter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.5rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-3 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 0.6875rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-4 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #175BF5;
  overflow: hidden;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: white;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
        >
          
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
        >
          
          JN
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with src 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.5rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-2 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-3 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 0.6875rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-4 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.875rem;
  height: 2.875rem;
  border-radius: 100%;
  border: 0.0625rem solid #edefff;
  box-sizing: border-box;
  background: #868dcc;
  overflow: hidden;
  position: relative;
  font-size: 1rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-5 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
